Nuevas plantillas para soporte LXC

--- a/playbooks/roles/sshbot/templates/autossh.conf.j2
+++ b/playbooks/roles/sshbot/templates/autossh.conf.j2
@@ -9,7 +9,7 @@ stop  on (stopped networking)
 
 respawn
 
-setuid {{ ansible_user_id }}
+setuid {{ sshbot_user }}
 
 env AUTOSSH_GATETIME=0
 export AUTOSSH_GATETIME
