--- a/playbooks/roles/lab-host/templates/coreos_qemu.sh.j2
+++ b/playbooks/roles/lab-host/templates/coreos_qemu.sh.j2
@@ -187,6 +187,11 @@ exec qemu-system-x86_64 \
     -net nic,vlan=0,model=virtio,macaddr={{ item.mac }} \
     -net bridge,vlan=0,br={{ bridge_name }} \
     -display none \
-    -drive if=virtio,addr=0x10,file=/dev/zvol/{{ zfs_path }}/{{ item.hostname }} \
+{% if zfs_path is defined and zfs_path %}
+    -drive "if=virtio,addr=0x10,file=/dev/zvol/{{ zfs_path }}/{{ item.hostname }}" \
+{% endif %}
+{% if lvm_vg is defined and lvm_vg %}
+    -drive "if=virtio,addr=0x10,file=/dev/mapper/{{ lvm_vg }}-kvm_{{ item.hostname }}" \
+{% endif %}
     "$@" 
 #exit $?
